--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <main>
         <header>
         </header>
-        <div class="container flex">
-            <h2>My Contacts</h2>
-            <div class="container-content flex2">
+        <div class="container">
+            <div class="container-form flex">
+                <h2>My Contacts</h2>
                 <form class="form-contact">
                     <div class="input-container">
                         <input type="text" id="contact-info" name="contact"
@@ -40,10 +40,10 @@
                     </div>
                 </form>
             </div>
-            <div class="box flex3">
+            <div class="container-div-list flex">
             </div>
 
-            <div class="contacts-saved flex">
+            <div class="container-counter flex">
                 <p><strong>Contacst Saved: <span>0</span></strong></p>
             </div>
         </div>
